--- a/src/Pages/login.css
+++ b/src/Pages/login.css
@@ -1,5 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Faster+One&family=Honk&family=Lilita+One&family=Racing+Sans+One&family=Rowdies:wght@300;400;700&display=swap');
+
+
 .main{
-    background-color: #ebf4fc;
+  background: linear-gradient(
+    92.65deg,
+   
+    #779bdf 55.11%,
+    #a18fde 92.38%
+ 
+  ),
+  #b5d0e7;
+  
 }
 .section1 {
    /* margin-left: -30%; */
@@ -18,8 +29,12 @@
   
   .lmshead{
   font-size: 45px;
-  font-weight: 700;
+  font-weight: 500;
   color: #052864;
+  font-family: "Rowdies", sans-serif;
+ 
+  font-style: normal;
+  
   }
   
   .subtitle{
@@ -48,8 +63,7 @@
        
         #052864 55.11%,
         #3b13bd 92.38%
-      ),
-      #3193e4;
+      );
     width: 100%;
     max-width: 360px;
     height: 40px;
